# tuya-sdk

./: .gitignore  README-zh.md  README.md
mcp-python/: README-zh.md  README.md  pyproject.toml
mcp-python/examples/: README.md  __main__.py  quick_start.py
mcp-python/examples/mcp/: mock_mcp_server.py
mcp-python/src/mcp_sdk/: __init__.py  auth.py  client.py  connection_manager.py  exceptions.py  heartbeat.py  mcp_client.py  mcp_sdk.py  models.py  signature.py  websocket_adapter.py
